--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "@as-integrations/fastify": "^1.3.2",
     "@athenajs/utils": "workspace:^",
     "@fastify/cors": "^8.3.0",
+    "@fastify/multipart": "^7.7.2",
     "dotenv": "^16.3.1",
     "fastify": "^4.18.0",
     "graphql": "^16.7.1",
