--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,12 @@
     "indentStyle": "space"
   },
   "linter": {
-    "enabled": true
+    "enabled": true,
+    "rules": {
+      "style": {
+        "useImportType": "off"
+      }
+    }
   },
   "javascript": {
     "parser": {
